# Signal_Processing

DSP/JANUS/: ROMANIS_nVIDIA-venu-edited.docx  dsp.h  dspdebug.h  janusProc.c  janusProc.h  janusTest.c  schemeproc.h
DSP/Robust_Eq/: Makefile  SER_SNR_static_channel.mat  adapReSampTest.m  adaptiveResamplingTest.m  adaptiveRobustEq.m  channelEstimator.m  compressResults.m  computeBER.m  computeG.m  computeSER.m  genChannelMultipath.m  genChannelMultipathAmp.m  genChannelMultipathStatic.m  plotBER.m  plotResultsArray.m  plotResultsFile.m  qIPMAPA.m  robustEqualizer.m  runSERSim.m  runSimMultiple.m  runSimSingle.m
DSP/bfskTest/: bfskproc.c  bfskproc.h  bfskproc_250_bps.c.backup  bfskproc_250_bps.c.backup~  bfskproc_3_sym_per_bit.c  bfskproc_5_sym_per_bit.c  bfskproc_5_sym_per_bit.c~  bfskproc_750_bps.c~  bfsktest.c  schemeproc.h  signal.txt  signal_A.txt  signal_B.txt  signal_C.txt  sync.h
DSP/convo2/: convo2.c  convo2.c~  convo2.h  main.c
DSP/mfsk/: freqs  test.m  txFreqs  txSignal.txt
DTLA_RT/: Makefile  sftp-config.json  timigs.txt
DTLA_RT/include/: deg2rad.hpp  filtSignal.hpp  findSigFreq.hpp  genFilt.hpp  hilbertTrans.hpp  rad2deg.hpp  rtPingerDet.hpp  settings.h
DTLA_RT/src/: deg2rad.cpp  eFreqBeamForm.c  filtSignal.cpp  findSigFreq.cpp  genFilt.cpp  hilbertTrans.cpp  rad2deg.cpp  rtPingerDet.cpp  rtPingerDet.cpp.bak.cpp
MATLAB/: test.m
MATLAB/MFSK/: data_FFT.m  (+14 more)
ROMANIS/: ROMANIS_nVIDIA.docx  presentation.pptx
ROMANIS/ROMANIS_scripts/SYSCON/SYSCON_wetend/Linux/unit_tests/: Makefile.am  configure.in  initialize.sh  sync_mcu.cc  test_timestamp_mcu.cc
(+357 files in other folders)
